fix(filter-multi-select): align checkbox and badge in SelectOption

--- a/packages/select/src/FilterMultiSelect/components/MultiSelectOption/MultiSelectOption.scss
+++ b/packages/select/src/FilterMultiSelect/components/MultiSelectOption/MultiSelectOption.scss
@@ -53,15 +53,24 @@
   }
 }
 
+$iconAndBadgeHeight: $spacing-md;
+
 .icon {
   line-height: 1;
-  height: calc(#{$spacing-md} - #{$border-solid-border-width} * 2);
-  width: calc(#{$spacing-md} - #{$border-solid-border-width} * 2);
+  height: calc(#{$iconAndBadgeHeight} - #{$border-solid-border-width} * 2);
+  width: calc(#{$iconAndBadgeHeight} - #{$border-solid-border-width} * 2);
   border: $border-solid-border-width $border-solid-border-style;
   border-color: $color-gray-500;
   border-radius: $border-solid-border-radius;
   display: inline-flex;
   justify-content: center;
+  align-items: center;
+}
+
+.badgeContainer {
+  // Must be the same height as .icon, so they align vertically
+  height: $iconAndBadgeHeight;
+  display: flex;
   align-items: center;
 }
 
